# rov_controller

./: README.md
src/bottom/: CMakeLists.txt  package.xml  remote_init.sh
src/bottom/cfg/: Pid.cfg
src/bottom/scripts/: bottom.py  remote_init.sh
src/bottom/src/: arduino_controller.py  bottom.py  bottom_node.py  bridge.py  thrusters_controller.py  velocity_position_controller.py
src/openrov_msgs/: CMakeLists.txt  package.xml
src/openrov_msgs/msg/: RovMotion.msg  RovSensors.msg
src/rov_control/: CMakeLists.txt  package.xml  rov.launch  rov.sh
src/rov_control/config/: joy_teleop.yaml  pid.yaml  thrusters.yaml
src/rov_control/launch/: openrov.launch  rov.launch
src/rov_control/msg/: ControlData.msg
src/rov_control/scripts/: rov.sh  surface.py
