<?xml version="1.0"?>
<package format="2">
  <name>openrov_msgs</name>
  <version>0.0.0</version>
  <description>This package provides message types used with OpenROV</description>
  <maintainer email="stsssts@todo.todo">stsssts</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
